--- a/MoppApp/MoppApp/TokenFlow.storyboard
+++ b/MoppApp/MoppApp/TokenFlow.storyboard
@@ -283,7 +283,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="right" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MHH-mX-gAV" customClass="SwitchButton" customModule="MoppApp" customModuleProvider="target">
-                                                        <rect key="frame" x="284.5" y="0.0" width="42.5" height="31"/>
+                                                        <rect key="frame" x="276" y="0.0" width="51" height="31"/>
                                                         <color key="onTintColor" red="0.54901960780000003" green="0.76470588240000004" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </switch>
                                                 </subviews>
@@ -657,7 +657,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="675.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4W-fO-5Jo">
-                                                <rect key="frame" x="57.5" y="235" width="260" height="205"/>
+                                                <rect key="frame" x="57.5" y="232.5" width="260" height="210"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1234" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y4s-L6-tey" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                         <rect key="frame" x="20" y="20" width="220" height="37.5"/>
@@ -675,41 +675,52 @@
                                                         <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" role="cancel" translatesAutoresizingMaskIntoConstraints="NO" id="E5q-45-tPB" userLabel="Cancel signing" customClass="ScaledButton" customModule="MoppApp" customModuleProvider="target">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2DA-fM-Cqm">
                                                         <rect key="frame" x="54" y="150" width="152" height="48"/>
-                                                        <color key="backgroundColor" name="MoppError"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="48" id="ab2-62-uoG"/>
-                                                        </constraints>
-                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Cancel">
-                                                            <backgroundConfiguration key="background">
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" role="cancel" translatesAutoresizingMaskIntoConstraints="NO" id="E5q-45-tPB" userLabel="Cancel signing" customClass="ScaledButton" customModule="MoppApp" customModuleProvider="target">
+                                                                <rect key="frame" x="0.0" y="0.0" width="152" height="48"/>
                                                                 <color key="backgroundColor" name="MoppError"/>
-                                                            </backgroundConfiguration>
-                                                            <color key="baseBackgroundColor" name="MoppError"/>
-                                                        </buttonConfiguration>
-                                                        <connections>
-                                                            <action selector="cancelSigningButton:" destination="njX-pY-fMf" eventType="touchUpInside" id="K1P-cs-rvN"/>
-                                                        </connections>
-                                                    </button>
+                                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Cancel">
+                                                                    <backgroundConfiguration key="background">
+                                                                        <color key="backgroundColor" name="MoppError"/>
+                                                                    </backgroundConfiguration>
+                                                                    <fontDescription key="titleFontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                                                    <color key="baseBackgroundColor" name="MoppError"/>
+                                                                </buttonConfiguration>
+                                                                <connections>
+                                                                    <action selector="cancelSigningButton:" destination="njX-pY-fMf" eventType="touchUpInside" id="K1P-cs-rvN"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="trailing" secondItem="E5q-45-tPB" secondAttribute="trailing" id="DKh-u7-dsI"/>
+                                                            <constraint firstItem="E5q-45-tPB" firstAttribute="leading" secondItem="2DA-fM-Cqm" secondAttribute="leading" id="HUx-a0-jdT"/>
+                                                            <constraint firstAttribute="bottom" secondItem="E5q-45-tPB" secondAttribute="bottom" id="YB5-Ji-ULC"/>
+                                                            <constraint firstItem="E5q-45-tPB" firstAttribute="top" secondItem="2DA-fM-Cqm" secondAttribute="top" id="ahN-7M-jif"/>
+                                                            <constraint firstAttribute="height" constant="48" id="mA4-7E-t44"/>
+                                                        </constraints>
+                                                    </view>
                                                 </subviews>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="kCl-Er-ybP" secondAttribute="trailing" constant="20" symbolic="YES" id="9Ge-az-0XC"/>
+                                                    <constraint firstAttribute="trailing" secondItem="2DA-fM-Cqm" secondAttribute="trailing" constant="54" id="9qR-UX-Pqd"/>
                                                     <constraint firstItem="PFw-wj-Jk6" firstAttribute="top" secondItem="y4s-L6-tey" secondAttribute="bottom" constant="15.5" id="AI8-hx-BM8"/>
                                                     <constraint firstItem="y4s-L6-tey" firstAttribute="leading" secondItem="b4W-fO-5Jo" secondAttribute="leading" constant="20" symbolic="YES" id="AZI-bn-U9g"/>
+                                                    <constraint firstItem="2DA-fM-Cqm" firstAttribute="leading" secondItem="b4W-fO-5Jo" secondAttribute="leading" constant="54" id="BAZ-Pc-1x9"/>
                                                     <constraint firstAttribute="trailing" secondItem="PFw-wj-Jk6" secondAttribute="trailing" constant="20" symbolic="YES" id="E99-zh-TVx"/>
                                                     <constraint firstItem="PFw-wj-Jk6" firstAttribute="leading" secondItem="b4W-fO-5Jo" secondAttribute="leading" constant="20" symbolic="YES" id="GyZ-H9-fVO"/>
                                                     <constraint firstAttribute="width" constant="260" id="NHf-nf-zyg"/>
-                                                    <constraint firstItem="E5q-45-tPB" firstAttribute="top" secondItem="kCl-Er-ybP" secondAttribute="bottom" constant="16" id="Neq-zB-cQp"/>
                                                     <constraint firstAttribute="trailing" secondItem="y4s-L6-tey" secondAttribute="trailing" constant="20" symbolic="YES" id="Rea-29-eTT"/>
                                                     <constraint firstItem="kCl-Er-ybP" firstAttribute="leading" secondItem="b4W-fO-5Jo" secondAttribute="leading" constant="20" symbolic="YES" id="V8r-pW-teO"/>
-                                                    <constraint firstItem="E5q-45-tPB" firstAttribute="leading" secondItem="b4W-fO-5Jo" secondAttribute="leading" constant="54" id="Weo-aI-OSD"/>
+                                                    <constraint firstAttribute="bottom" secondItem="2DA-fM-Cqm" secondAttribute="bottom" constant="12" id="W6K-GN-v1I"/>
                                                     <constraint firstItem="kCl-Er-ybP" firstAttribute="top" secondItem="PFw-wj-Jk6" secondAttribute="bottom" constant="8" symbolic="YES" id="gH3-iT-pL5"/>
-                                                    <constraint firstAttribute="bottom" secondItem="E5q-45-tPB" secondAttribute="bottom" constant="7" id="kFU-af-BrX"/>
+                                                    <constraint firstItem="2DA-fM-Cqm" firstAttribute="top" secondItem="kCl-Er-ybP" secondAttribute="bottom" constant="16" id="gIk-5E-npT"/>
                                                     <constraint firstItem="y4s-L6-tey" firstAttribute="top" secondItem="b4W-fO-5Jo" secondAttribute="top" constant="20" symbolic="YES" id="tgC-TX-dq5"/>
-                                                    <constraint firstAttribute="trailing" secondItem="E5q-45-tPB" secondAttribute="trailing" constant="54" id="yj9-jg-9lK"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -745,12 +756,16 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="wtQ-QO-3Hk" secondAttribute="bottom" id="2fh-Wi-QTJ"/>
                             <constraint firstItem="Lcj-IP-ZwZ" firstAttribute="trailing" secondItem="EL9-fp-k7p" secondAttribute="trailing" id="5BM-bL-bx3"/>
+                            <constraint firstItem="EL9-fp-k7p" firstAttribute="top" secondItem="wtQ-QO-3Hk" secondAttribute="top" constant="20" id="5Yn-7E-XWW"/>
                             <constraint firstItem="Lcj-IP-ZwZ" firstAttribute="top" secondItem="EL9-fp-k7p" secondAttribute="top" id="A8T-W6-Ufl"/>
                             <constraint firstItem="wtQ-QO-3Hk" firstAttribute="leading" secondItem="L0P-Ga-VHk" secondAttribute="leading" id="FGq-77-SOM"/>
                             <constraint firstItem="Lcj-IP-ZwZ" firstAttribute="bottom" secondItem="EL9-fp-k7p" secondAttribute="bottom" id="WlK-TX-YPI"/>
                             <constraint firstItem="Lcj-IP-ZwZ" firstAttribute="leading" secondItem="EL9-fp-k7p" secondAttribute="leading" id="Y7n-qu-5wq"/>
                             <constraint firstItem="wtQ-QO-3Hk" firstAttribute="top" secondItem="L0P-Ga-VHk" secondAttribute="top" id="ZjG-d5-Aor"/>
                             <constraint firstAttribute="trailing" secondItem="wtQ-QO-3Hk" secondAttribute="trailing" id="jIc-VO-P9h"/>
+                            <constraint firstItem="wtQ-QO-3Hk" firstAttribute="leading" secondItem="EL9-fp-k7p" secondAttribute="leading" id="kmR-M8-3cj"/>
+                            <constraint firstItem="EL9-fp-k7p" firstAttribute="bottom" secondItem="wtQ-QO-3Hk" secondAttribute="bottom" id="vdB-zq-Eiu"/>
+                            <constraint firstItem="EL9-fp-k7p" firstAttribute="trailing" secondItem="wtQ-QO-3Hk" secondAttribute="trailing" id="zeJ-nZ-oVc"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
@@ -865,7 +880,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="right" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7QK-Af-BRR" customClass="SwitchButton" customModule="MoppApp" customModuleProvider="target">
-                                                        <rect key="frame" x="253.5" y="0.0" width="41.5" height="31"/>
+                                                        <rect key="frame" x="244" y="0.0" width="51" height="31"/>
                                                     </switch>
                                                 </subviews>
                                             </stackView>
@@ -1029,7 +1044,7 @@
                                                         <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" role="cancel" translatesAutoresizingMaskIntoConstraints="NO" id="JsI-wz-mex" userLabel="Cancel signing" customClass="ScaledButton" customModule="MoppApp" customModuleProvider="target">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" role="cancel" translatesAutoresizingMaskIntoConstraints="NO" id="JsI-wz-mex" userLabel="Cancel signing" customClass="ScaledButton" customModule="MoppApp" customModuleProvider="target">
                                                         <rect key="frame" x="54" y="143" width="141.5" height="48"/>
                                                         <color key="backgroundColor" name="MoppError"/>
                                                         <constraints>
@@ -1041,6 +1056,7 @@
                                                             <backgroundConfiguration key="background">
                                                                 <color key="backgroundColor" name="MoppError"/>
                                                             </backgroundConfiguration>
+                                                            <fontDescription key="titleFontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                                             <color key="baseBackgroundColor" name="MoppError"/>
                                                         </buttonConfiguration>
                                                         <connections>
@@ -1102,6 +1118,7 @@
                             <constraint firstItem="v3F-23-5UH" firstAttribute="trailing" secondItem="j8D-Mm-Hbt" secondAttribute="trailing" id="OfH-FP-NJA"/>
                             <constraint firstItem="v3F-23-5UH" firstAttribute="leading" secondItem="j8D-Mm-Hbt" secondAttribute="leading" id="dVm-Q0-yfU"/>
                             <constraint firstItem="v3F-23-5UH" firstAttribute="bottom" secondItem="j8D-Mm-Hbt" secondAttribute="bottom" id="jI4-9S-awy"/>
+                            <constraint firstItem="j8D-Mm-Hbt" firstAttribute="top" secondItem="v3F-23-5UH" secondAttribute="top" constant="20" id="sjo-jw-xmC"/>
                         </constraints>
                     </view>
                     <connections>
